CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_encmbr__x.object
<CustomObject>
    <description>batchsit$t_auth_encmbr</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_auth_encmbr</externalName>
    <fields>
        <fullName>cde_level_care__c</fullName>
        <description>cde_level_care</description>
        <externalDeveloperName>cde_level_care</externalDeveloperName>
        <label>Care Level</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_encmbr__c</fullName>
        <description>cde_status_encmbr</description>
        <externalDeveloperName>cde_status_encmbr</externalDeveloperName>
        <label>Encumbrance Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_unit_care__c</fullName>
        <description>cde_type_unit_care</description>
        <externalDeveloperName>cde_type_unit_care</externalDeveloperName>
        <label>Rate Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_hour_attnd_actual__c</fullName>
        <description>cnt_hour_attnd_actual</description>
        <externalDeveloperName>cnt_hour_attnd_actual</externalDeveloperName>
        <label>Actual Attended Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnt_hour_care__c</fullName>
        <description>cnt_hour_care</description>
        <externalDeveloperName>cnt_hour_care</externalDeveloperName>
        <label>Authorized Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_encmbr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <description>dte_care</description>
        <externalDeveloperName>dte_care</externalDeveloperName>
        <label>Date of Care</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Encumbrance</relationshipLabel>
        <relationshipName>batchsit_t_auth_encmbr</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_encmbr_auth__c</fullName>
        <description>idn_encmbr_auth</description>
        <externalDeveloperName>idn_encmbr_auth</externalDeveloperName>
        <label>identifier Auth encumbrance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_encmbr1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_0_36_months__c</fullName>
        <description>ind_0_36_months</description>
        <externalDeveloperName>ind_0_36_months</externalDeveloperName>
        <label>0-36 Months</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Authorization Encumbrance</label>
    <pluralLabel>Authorization Encumbrance</pluralLabel>
</CustomObject>