CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_encmbr__x/fields/isdelete__c.field-meta.xml
<CustomField>
    <fullName>isdelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isdelete</description>
    <externalDeveloperName>isdelete</externalDeveloperName>
    <label>Isdelete</label>
    <type>Checkbox</type>
</CustomField>